add review count on home, search, category (issue #232)

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -896,3 +896,7 @@ _:-ms-lang(x), .circle-mask2-text {
         width:35%;
     }
 }
+
+.card-author-product-reviews{
+    display: inline-block;
+}
