--- a/templates/category.html
+++ b/templates/category.html
@@ -325,6 +325,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                             </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -433,6 +436,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                             </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -540,6 +546,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
                                             </div>
                                         </div>
                                     </div>
