--- a/templates/search.html
+++ b/templates/search.html
@@ -101,6 +101,9 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </div>
+                                    <div class="card-author-product-reviews">
+                                        ({{ product.id|get_product_review_count }})
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -209,6 +212,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
                                             </div>
                                         </div>
                                     </div>
@@ -320,6 +326,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                             </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -429,6 +438,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
                                             </div>
                                         </div>
                                     </div>
