--- a/templates/home.html
+++ b/templates/home.html
@@ -232,6 +232,9 @@
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                         <i class="fa fa-star" aria-hidden="true"></i>
                                     </div>
+                                    <div class="card-author-product-rating">
+                                        {{ product_id|get_product_review_count }}
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -339,6 +342,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
                                             </div>
                                         </div>
                                     </div>
@@ -450,6 +456,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                             </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -559,6 +568,9 @@
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
                                                 <i class="fa fa-star" aria-hidden="true"></i>
+                                            </div>
+                                            <div class="card-author-product-reviews">
+                                                ({{ product.id|get_product_review_count }})
                                             </div>
                                         </div>
                                     </div>
