--- a/static/css/dashboard/seller/profit.css
+++ b/static/css/dashboard/seller/profit.css
@@ -227,3 +227,26 @@
     min-height: 252px;
     text-align: center;
 }
+
+.withdraw-history-ul {
+    list-style: none;
+    display: inline-block;
+    font-size: 14px;
+    color: #555555;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
+.withdraw-history-ul li{
+    display: inline;
+}
+
+.withdraw-history .date{
+    margin-right: 110px;
+}
+
+.withdraw-history .price{
+    margin-right: 110px;
+}
