--- a/templates/account/dashboard_question.html
+++ b/templates/account/dashboard_question.html
@@ -104,6 +104,16 @@
                         {% include 'question/question_seller_7.html' %}
                     </div>
                 </div>
+                <div class="question_content_each">
+                    <div class="question-content-title-wrapper">
+                        <img src="{% static 'img/search.png' %}">
+                        <div class="question-content-title">소셜업의 수수료는 어떻게 되나요?</div>
+                        <span><i class="fa fa-caret-down" aria-hidden="true"></i></span>
+                    </div>
+                    <div class="question_content_text">
+                        {% include 'question/question_seller_8.html' %}
+                    </div>
+                </div>
             </div>
             <div class="question_content purchase">
                 <div class="question_content_each">
