delete required current password in account_change (issue #307)

--- a/templates/account/account_change.html
+++ b/templates/account/account_change.html
@@ -206,7 +206,7 @@
                     </div>
                     <div class="password_rest_content">
                         <div>
-                            * 현재 비밀번호 <input type="password" name="current_passwd" id="current_passwd">
+                            현재 비밀번호 <input type="password" name="current_passwd" id="current_passwd">
                         </div>
                         <div>
                             변경 비밀번호 <input type="password" name="new_passwd1" id="new_passwd1">
