--- a/templates/account/account_change.html
+++ b/templates/account/account_change.html
@@ -77,6 +77,29 @@
                 });
             }
         });
+
+        $('.change_button_seller').on('click', function() {
+            var precheck_flag = true;
+
+            if($('input[name=company_name]').val()==''){
+                alert('회사명을 입력해주세요.');
+                precheck_flag = false;
+            }else if($('input[name=representative_name]').val()=='') {
+                alert('대표자명을 입력해주세요.');
+                precheck_flag = false;
+            }else if($('input[name=corporate_number]').val()=='') {
+                alert('사업자 번호를 입력해주세요.');
+                precheck_flag = false;
+            }else if($('.file_name.business_license').val()=='파일선택'){
+                alert('사업자등록증 사본을 업로드해주세요.');
+                precheck_flag = false;
+            }
+
+            if(precheck_flag){
+                $("#dialog-confirm2").dialog('open');
+            }
+        });
+
      </script>
 {% endblock %}
 
@@ -318,7 +341,7 @@
                     </div>
                     <div class="seller_form_content company_name">
                         <div class="seller_form_title company_name">
-                            {{ seller_form.company_name.label }}
+                            *{{ seller_form.company_name.label }}
                         </div>
                         <div class="seller_form_input company_name">
                             {{ seller_form.company_name }}
@@ -326,7 +349,7 @@
                     </div>
                     <div class="seller_form_content representative_name">
                         <div class="seller_form_title representative_name">
-                            {{ seller_form.representative_name.label }}
+                            *{{ seller_form.representative_name.label }}
                         </div>
                         <div class="seller_form_input representative_name">
                             {{ seller_form.representative_name }}
@@ -334,7 +357,7 @@
                     </div>
                     <div class="seller_form_content corporate_number">
                         <div class="seller_form_title corporate_number">
-                            {{ seller_form.corporate_number.label }}
+                            *{{ seller_form.corporate_number.label }}
                         </div>
                         <div class="seller_form_input corporate_number">
                             {{ seller_form.corporate_number }}
@@ -358,7 +381,7 @@
                     </div>
                     <div class="seller_form_content business_license">
                         <div class="seller_form_title business_license">
-                            {{ seller_form.business_license.label }}
+                            *{{ seller_form.business_license.label }}
                         </div>
                         <div class="seller_form_input business_license">
                             {% if seller.business_license.name %}
