withdraw history in profit_manage page

--- a/static/css/dashboard/seller/profit.css
+++ b/static/css/dashboard/seller/profit.css
@@ -222,9 +222,10 @@
 
 .profit-history {
     margin-top: 10px;
+    padding-bottom: 25px;
     border: 2px solid #DADADA;
     width: 561px;
-    min-height: 252px;
+    height: 229px;
     text-align: center;
 }
 
@@ -249,4 +250,41 @@
 
 .withdraw-history .price{
     margin-right: 110px;
+}
+
+.withdraw-history-ul-wrapper {
+    margin-bottom: 10px;
+}
+
+.withdrawal_items_wrapper {
+    text-align: center;
+    overflow: scroll;
+    max-height: 172px;
+}
+.withdrawal_items_wrapper .withdrawal_item {
+    border: 1px solid #DADADA;
+    width: 88%;
+    text-align: center;
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+.withdrawal_item span {
+    display: inline-block;
+
+}
+
+.withdrawal_item .withdraw_date {
+    width: 32%;
+    text-align: center;
+}
+
+.withdrawal_item .withdraw_money {
+    width: 32%;
+    text-align: center;
+}
+
+.withdrawal_item .withdraw_status {
+    width: 33%;
+    text-align: center;
 }
