--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -141,33 +141,64 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
 
                         if (total_info !== '') {
                             if (total_info > 0) {
-                                IMP.request_pay({
-                                    pg: 'html5_inicis',
-                                    escrow: false,
-                                    digital: true,
-                                    pay_method: buyer_type,
-                                    merchant_uid: order_info,
-                                    name: '[소셜업]' + purchase_name,
-                                    amount: total_info,
-                                    buyer_email: "{{ user.email }}",
-                                    buyer_name: buyer_name,
-                                    buyer_tel: buyer_phone
-                                }, function (rsp) {
-                                    if (rsp.success) {
-                                        //var msg = '결제가 완료되었습니다.';
-                                        //msg += '고유ID : ' + rsp.imp_uid;
-                                        //msg += '상점 거래ID : ' + rsp.merchant_uid;
-                                        //msg += '결제 금액 : ' + rsp.paid_amount;
-                                        //msg += '카드 승인번호 : ' + rsp.apply_num;
-                                        //console.log(msg);
-                                        ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
-                                    } else {
-                                        var msg = '결제에 실패하였습니다.';
-                                        msg += '에러내용 : ' + rsp.error_msg;
-                                        alert(msg);
-                                        post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
-                                    }
-                                });
+
+                                if (buyer_type == 'phone') {
+                                    IMP.request_pay({
+                                        pg: 'danal',
+                                        escrow: false,
+                                        digital: true,
+                                        pay_method: buyer_type,
+                                        merchant_uid: order_info,
+                                        name: '[소셜업]' + purchase_name,
+                                        amount: total_info,
+                                        buyer_email: "{{ user.email }}",
+                                        buyer_name: buyer_name,
+                                        buyer_tel: buyer_phone
+                                    }, function (rsp) {
+                                        if (rsp.success) {
+                                            //var msg = '결제가 완료되었습니다.';
+                                            //msg += '고유ID : ' + rsp.imp_uid;
+                                            //msg += '상점 거래ID : ' + rsp.merchant_uid;
+                                            //msg += '결제 금액 : ' + rsp.paid_amount;
+                                            //msg += '카드 승인번호 : ' + rsp.apply_num;
+                                            //console.log(msg);
+                                            ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
+                                        } else {
+                                            var msg = '결제에 실패하였습니다.';
+                                            msg += '에러내용 : ' + rsp.error_msg;
+                                            alert(msg);
+                                            post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
+                                        }
+                                    });
+                                } else {
+                                    IMP.request_pay({
+                                        pg: 'danal_tpay',
+                                        escrow: false,
+                                        digital: true,
+                                        pay_method: buyer_type,
+                                        merchant_uid: order_info,
+                                        name: '[소셜업]' + purchase_name,
+                                        amount: total_info,
+                                        buyer_email: "{{ user.email }}",
+                                        buyer_name: buyer_name,
+                                        buyer_tel: buyer_phone
+                                    }, function (rsp) {
+                                        if (rsp.success) {
+                                            //var msg = '결제가 완료되었습니다.';
+                                            //msg += '고유ID : ' + rsp.imp_uid;
+                                            //msg += '상점 거래ID : ' + rsp.merchant_uid;
+                                            //msg += '결제 금액 : ' + rsp.paid_amount;
+                                            //msg += '카드 승인번호 : ' + rsp.apply_num;
+                                            //console.log(msg);
+                                            ImpTransaction(e, rsp.merchant_uid, rsp.imp_uid, rsp.paid_amount);
+                                        } else {
+                                            var msg = '결제에 실패하였습니다.';
+                                            msg += '에러내용 : ' + rsp.error_msg;
+                                            alert(msg);
+                                            post_to_url('/dashboard/purchase/fail/', {"order_id":order_info, "csrfmiddlewaretoken":"{{ csrf_token }}"});
+                                        }
+                                    });
+                                }
                             }
                             else if (total_info === 0){
                                 alert("결제가 완료되었습니다.");
